@@ -1,5 +1,5 @@
 AUX scmbug-0.23.4-threads.patch 340 RMD160 b9208bd49d8c3a96c2a30d77591347b8feaa85ee SHA1 f446e0aa8044149ff21693470b9baa1dc8c003e3 SHA256 73da0f5703273ca3eae68c1a532d9d7f3dd97ff000b5eb7cdaae9fb8fc8a8394
 DIST SCMBUG_RELEASE_0-23-4.tar.gz 509612 RMD160 14cfe0d95b4b8ca799087752a3919ac68b170fc6 SHA1 174f3266eaa2c63e042f234f848d2c51d55708ed SHA256 52e3ea38ccbbc1ea95744bbc63b82efd7ab6e62f7f12051b44efc0f962192213
-EBUILD scmbug-0.23.4.ebuild 902 RMD160 1cc82304c2cd36575a40cee5b121a5c46ba89be0 SHA1 938643df73337228f999223627434289594f5855 SHA256 1292ce8280be3171c6199272b4e260b72cdb302662122bdb749cdb820334c5f3
-MISC ChangeLog 273 RMD160 53375d0d391a953acf1deef49819fc8786aeb2ad SHA1 30a6b2214f8136992d53003f067f45043338ef27 SHA256 b4f112851cbb8e707be1ad3eb21efe44e212ed378563b25cc3e794681bbe9c2d
+EBUILD scmbug-0.23.4.ebuild 898 RMD160 db06c5c134b4e47eab44b234051d31441c61e3fc SHA1 3b2a1bcdf536cd1f89bdea824c19e7ebdd7c9b93 SHA256 a537db1cda317ffa159d4b1371e0ff7d11634613ef169e38818883c00d6e8b68
+MISC ChangeLog 395 RMD160 8e6428e18e940b472a2573818dc938d6d7d52555 SHA1 b60e495d70c01fea419fe33d9bdb15e93e146855 SHA256 522903fdbca4098f95e191ed336df6b373dd4412328a49f1882eac27954a17d7
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
