@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Feb 2008; Christoph Brill (egore) egore@gmx.de scmbug-0.23.4.ebuild:
+  Update ebuild with suggestions from Tommy[D]
+
   15 Feb 2008; Christoph Brill (egore) egore@gmx.de
   +files/scmbug-0.23.4-threads.patch, +metadata.xml, +scmbug-0.23.4.ebuild:
   New Ebuild for bug 194352
